--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ p {
     font-size: 2rem;
     position: fixed;
     display: block;
-    top: 95%;
+    top: 90%;
     left: 3vw;
 }
 body {
@@ -221,3 +221,13 @@ aside:first-letter{
   float: left;
   font-weight: bold;
 }
+#mydiv {
+	width: 100%;
+}
+img[usemap] {
+	border: none;
+	height: auto;
+	max-width: 100%;
+	width: auto;
+}
+ 
